1.5.14.dev0
 * #398: Clarify canonical home of borgmatic in documentation.
 * Fix build so as not to attempt to build and push documentation for a non-master branch.

1.5.13
 * #373: Document that passphrase is used for Borg keyfile encryption, not just repokey encryption.
 * #404: Add support for ruamel.yaml 0.17.x YAML parsing library.
 * Update systemd service example to return a permission error when a system call isn't permitted
   (instead of terminating borgmatic outright).
 * Drop support for Python 3.5, which has been end-of-lifed.
 * Add support for Python 3.9.
 * Update versions of test dependencies (test_requirements.txt and test containers).
 * Only support black code formatter on Python 3.8+. New black dependencies make installation
   difficult on older versions of Python.
 * Replace "improve this documentation" form with link to support and ticket tracker.

1.5.12
 * Fix for previous release with incorrect version suffix in setup.py. No other changes.

1.5.11
 * #341: Add "temporary_directory" option for changing Borg's temporary directory.
 * #352: Lock down systemd security settings in sample systemd service file.
 * #355: Fix traceback when a database hook value is null in a configuration file.
 * #361: Merge override values when specifying the "--override" flag multiple times. The previous
   behavior was to take the value of the last "--override" flag only.
 * #367: Fix traceback when upgrading old INI-style configuration with upgrade-borgmatic-config.
 * #368: Fix signal forwarding from borgmatic to Borg resulting in recursion traceback.
 * #369: Document support for Borg placeholders in repository names.

1.5.10
 * #347: Add hooks that run for the "extract" action: "before_extract" and "after_extract".
 * #350: Fix traceback when a configuration directory is non-readable due to directory permissions.
 * Add documentation navigation links on left side of all documentation pages.